--- a/Kafedra/Presentation/Kafedra.MVC/Areas/Azadedu/Views/Slider/Index.cshtml
+++ b/Kafedra/Presentation/Kafedra.MVC/Areas/Azadedu/Views/Slider/Index.cshtml
@@ -9,17 +9,29 @@
     
 }
 
+<div class="content-wrapper">
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-12 d-flex">
+                <h1 class="align-items-center" style="width:100%;">Slider</h1>
 
-
-    <div class="col-12">
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title">Slider Table    <a style="pos"  asp-action=Create asp-controller=Slider asp-area=Azadedu class="btn btn-app bg-success">
+              
+                      <a style="pos" asp-action=Create asp-controller=Slider asp-area=Azadedu class="btn btn-app bg-success">
 
                         <i class="fas fa-solid fa-plus"></i> Create
-                                </a></h3>
-                              
+                    </a>
             </div>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+    <div class="col-12">
+        <div class="card">
+           
               <p class=" mx-5 mt-3"><b><strong class="text-danger ">Qeyd:</strong> Diqqet!!! Statusu aktif olan 3 sekil olmalidir!!</b></p>
             <!-- ./card-header -->
             <div class="card-body">
@@ -94,5 +106,10 @@
         <!-- /.card -->
     </div>
 
+        </div>
+        </div>
 
+    
+</section>
+</div>
 
