--- a/Kafedra/Presentation/Kafedra.MVC/Views/Shared/_Layout.cshtml
+++ b/Kafedra/Presentation/Kafedra.MVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Comatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="~/assets/img/favicon4.png">
     @*<link rel="shortcut icon" type="image/x-icon" href="https://www.aztu.edu.az/web_admin/upload/files/aztu.edu.az/sitesettings/5-2022/favicon4.png">*@
@@ -32,8 +32,14 @@
         @await Component.InvokeAsync("Navbar")
     </header>
     <!-- MAIN -->
+
+
+
+
     <main>
+       
         @RenderBody()
+       
     </main>
     <!-- FOOTER -->
     <footer>
